--- a/index.html
+++ b/index.html
@@ -5,10 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>third</title>
+
+    <style>
+
+        p{
+            color: aliceblue;
+        }
+        img{
+            height: 300;
+            width: 400;
+        }
+    </style>
 </head>
 <body><h1>heading tag</h1>
-    <p>paragraph tag</p>
-    <img src="cover.jpg" alt="">
+      <p>paragraph tag</p>
+      <img src="cover.jpg" alt=""
+        
+     >
+
+
+     <img src="fbb.jpg" alt="">
     
 </body>
 </html>
