--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body><h1>heading tag</h1>
     <p>paragraph tag</p>
     <img src="cover.jpg" alt="">
+
+    <h1>okkkk</h1>
     
 </body>
 </html>
